# DigitalTripBook

./: CMakeLists.txt  FocusHelper.qml  HomePage.qml  JourneysPage.qml  Main.qml  MediaPage.qml  SimpleBarChart.qml  SimpleLineChart.qml  StatisticItem.qml  StatisticsPage.qml  TripDetailPage.qml  databasehandler.cpp  databasehandler.h  main.cpp  resources.qrc
android/: AndroidManifest.xml
android/res/values/: styles.xml
ios/: Info.plist  LaunchScreen.storyboard
